--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -1,6 +1,6 @@
 .body-container{
     width: 100vw;
-    height: 100vh;
+    height: auto;
     margin: 0%;
     padding: 0%;
     justify-content: center;
@@ -9,8 +9,8 @@
     overflow: hidden;
     color: white;
     background: rgb(0,159,231);
-  background: linear-gradient(326deg, #930de0 0%, rgba(0,159,231,1) 15%, #00dedf 50%, rgba(156,0,224,1) 100%);
-  background-repeat:no-repeat;
-  background-size: 100% 600%;
-  min-height: 100%;
+    background: linear-gradient(326deg, #930de0 0%, #009fe7 15%, #00dedf 50%, #9c00e0 100%);
+    background-repeat:no-repeat;
+    background-size: 100% 600%;
+    /* min-height: 100%; */
 }
