--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,5 +1,100 @@
 .home-container{
     width: 100vw;
     height: auto;
-    margin-top: 90px;
+    padding-top: 15vh;
+    padding-left: 5rem;
+    min-height: 100vh;
 }
+
+.home-container h1{
+    font-weight: bold;
+}
+
+.home-wrapper{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.home-left{
+    justify-content: center;
+    align-items: start;
+    width: 50%;
+}
+
+.home-left a{
+    text-decoration: none;
+}
+
+.home-right{
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+.home-right img{
+    width: auto;
+    height: auto;
+}
+
+/* animated button */
+.button-87 {
+    padding: 12px 30px;
+    text-align: center;
+    /* text-transform: uppercase; */
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 25px;
+    display: block;
+    border: 0px;
+    font-weight: 700;
+    box-shadow: 0px 0px 14px -7px #5adaff;
+    background-image: linear-gradient(45deg, #5468ff 0%, #009fe7  50%, #5468ff  100%);
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button-87:hover {
+    background-position: right center;
+    /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .button-87:active {
+    transform: scale(0.95);
+  }
+
+  /*animated button 2*/
+  .button-88 {
+    padding: 12px 30px;
+    text-align: center;
+    /* text-transform: uppercase; */
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;
+    border-radius: 25px;
+    display: block;
+    border: 0px;
+    font-weight: 700;
+    box-shadow: 0px 0px 14px -7px #5adaff;
+    background-image: linear-gradient(45deg, #190482 0%, #930de0  50%, #190482  100%);
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+  }
+  
+  .button-88:hover {
+    background-position: right center;
+    /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .button-88:active {
+    transform: scale(0.95);
+  }
