--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,8 +1,12 @@
 .App{
   -ms-overflow-style: none;
   scrollbar-width: none;
-  padding: 0%;
-  margin: 0%;
+  padding: 0;
+  margin: 0;
+  height: auto;
+  background: url("../images/bg-7.svg");
+  background-repeat:no-repeat;
+  background-size: cover;
 }
 
 .App::-webkit-scrollbar {
