--- a/src/css/Body.css
+++ b/src/css/Body.css
@@ -1,16 +1,16 @@
 .body-container{
-    width: 100vw;
     height: auto;
-    margin: 0%;
-    padding: 0%;
-    justify-content: center;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    /* justify-content: center; */
     align-items: center;
-    position: relative;
-    overflow: hidden;
     color: white;
-    background: rgb(0,159,231);
-    background: linear-gradient(326deg, #930de0 0%, #009fe7 15%, #00dedf 50%, #9c00e0 100%);
-    background-repeat:no-repeat;
-    background-size: 100% 600%;
-    /* min-height: 100%; */
+    /* background: rgb(0,159,231);
+    background: linear-gradient(326deg, #930de0 0%, #009fe7 15%, #00dedf 50%, #9c00e0 100%); */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
+.body-container::-webkit-scrollbar {
+    display: none;
+  }
