--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -2,12 +2,20 @@
     position: fixed;
     top: 0;
     left: 0;
+    padding: 0%;
+    margin: 0%;
     width: 100vw;
     height: 15vh;
     z-index: 100;
     /* font-family: 'Poppins', sans-serif; */
     /* font-family: 'Mulish', sans-serif; */
     font-family: 'Roboto Mono', monospace;
+}
+
+.brand-icon{
+    width: 35px;
+    height: 35px;
+    margin-right: 0.5rem;
 }
 
 .brand-text{
