--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -76,7 +76,7 @@
     font-weight: 700;
     font-size: 1rem;
     box-shadow: 0px 0px 14px -7px #5adaff;
-    background-image: linear-gradient(45deg, #5468ff 0%, #009fe7  50%, #5468ff  100%);
+    background-image: linear-gradient(45deg, #930de0 0%, #009fe7  50%, #5468ff  100%);
     cursor: pointer;
     user-select: none;
     -webkit-user-select: none;
@@ -110,7 +110,7 @@
     font-weight: 700;
     font-size: 1rem;
     box-shadow: 0px 0px 14px -7px #5adaff;
-    background-image: linear-gradient(45deg, #190482 0%, #930de0  50%, #190482  100%);
+    background-image: linear-gradient(45deg, #190482 0%, #009fe7  50%, #930de0 100%);
     cursor: pointer;
     user-select: none;
     -webkit-user-select: none;
